--- a/_config.yml
+++ b/_config.yml
@@ -1,33 +1,33 @@
-name: Rishabh Misra
+name: Qasim Hassan
 
-description: Sr. ML Engineer
+description: Data Engineer
 
-avatar: https://avatars0.githubusercontent.com/u/7669681?v=4&s=400&u=f84f21788154425e2a11a483a86f3753dbbb51cf
+avatar: https://avatars.githubusercontent.com/u/51156582?v=4
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: r1misra@eng.ucsd.edu
+  email: qasimhassan1020@gmailcom
   flickr:
-  github: rishabhmisra
+  github: aiwithqasim
   instagram:
-  linkedin: misrarishabh
+  linkedin: aiwithqasim
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: rishabh_misra_
+  twitter: qasimhassan1020
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCniigPpuI98maIGGrVEV8Bg # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
-  scholar: citations?user=EN3OcMsAAAAJ
-  medium: rishabh_misra_
+  scholar: # citations?user=EN3OcMsAAAAJ
+  medium: aiwithqasim
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: rishabhmisra
+disqus: aiwithqasim
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-63791734-1
+google_analytics: # UA-63791734-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
@@ -66,7 +66,7 @@ sass:
 
 theme: jekyll-theme-cayman
 
-repository: rishabhmisra/rishabhmisra.github.io
+repository: aiwithqasim/aiwithqasim.github.io
 
 # Use the following plug-ins
 gems:
